force-app/main/default/objects/AVO_Process_State_Transition_Trigger__c/AVO_Process_State_Transition_Trigger__c.object-meta.xml
<CustomObject>
    <label>Process State Transition Trigger</label>
    <nameField>
        <displayFormat>TT-{00000}</displayFormat>
        <label>Transition Trigger ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process State Transition Triggers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>