force-app/main/default/objects/AVO_Process_State_Transition_Trigger__c/fields/Avo_Deposit_Type__c.field-meta.xml
<CustomField>
    <fullName>Avo_Deposit_Type__c</fullName>
    <label>Deposit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any Deposit</fullName>
                <default>true</default>
                <label>Any Deposit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>