force-app/main/default/objects/AVO_Process_State_Transition_Trigger__c/fields/Avo_Fee_Status__c.field-meta.xml
<CustomField>
    <fullName>Avo_Fee_Status__c</fullName>
    <label>Fee Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>fully paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>