force-app/main/default/objects/AVO_Process_State_Transition_Trigger__c/fields/Avo_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Avo_Fee_Type__c</fullName>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Avo_Fee_Type</valueSetName>
    </valueSet>
</CustomField>