force-app/main/default/objects/AVO_Process_State_Transition_Trigger__c/fields/Avo_Formula_Condition__c.field-meta.xml
<CustomField>
    <fullName>Avo_Formula_Condition__c</fullName>
    <label>Formula Condition</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>