force-app/main/default/objects/AVO_Process_State_Transition_Trigger__c/fields/Avo_Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>Avo_Milestone_Name__c</fullName>
    <label>Milestone Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Avo_Milestone_Names</valueSetName>
    </valueSet>
</CustomField>