force-app/main/default/objects/AVO_Process_State_Transition_Trigger__c/fields/Avo_Notes__c.field-meta.xml
<CustomField>
    <fullName>Avo_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>