force-app/main/default/objects/AVO_Process_State_Transition_Trigger__c/fields/Avo_Process_State_Transition__c.field-meta.xml
<CustomField>
    <fullName>Avo_Process_State_Transition__c</fullName>
    <label>Process State Transition</label>
    <referenceTo>AVO_Process_State_Transition__c</referenceTo>
    <relationshipName>Process_State_Transition_Triggers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>