force-app/main/default/objects/AVO_Process_State_Transition_Trigger__c/fields/Avo_Status__c.field-meta.xml
<CustomField>
    <fullName>Avo_Status__c</fullName>
    <label>Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>