force-app/main/default/objects/AVO_Process_State_Transition_Trigger__c/recordTypes/Avo_Deposit_Trigger.recordType-meta.xml
<RecordType>
    <fullName>Avo_Deposit_Trigger</fullName>
    <active>true</active>
    <label>Deposit Trigger</label>
</RecordType>