force-app/main/default/objects/AVO_Process_State_Transition_Trigger__c/recordTypes/Avo_Fee_Trigger.recordType-meta.xml
<RecordType>
    <fullName>Avo_Fee_Trigger</fullName>
    <active>true</active>
    <label>Fee Trigger</label>
</RecordType>