force-app/main/default/objects/AVO_Process_State_Transition_Trigger__c/recordTypes/Avo_Inspection_Trigger.recordType-meta.xml
<RecordType>
    <fullName>Avo_Inspection_Trigger</fullName>
    <active>true</active>
    <label>Inspection Trigger</label>
</RecordType>