force-app/main/default/objects/AVO_Process_State_Transition_Trigger__c/recordTypes/Avo_Milestone_Trigger.recordType-meta.xml
<RecordType>
    <fullName>Avo_Milestone_Trigger</fullName>
    <active>true</active>
    <label>Milestone Trigger</label>
</RecordType>