force-app/main/default/objects/AVO_Process_State_Transition_Trigger__c/recordTypes/Avo_Review_Trigger.recordType-meta.xml
<RecordType>
    <fullName>Avo_Review_Trigger</fullName>
    <active>true</active>
    <label>Review Trigger</label>
</RecordType>