force-app/main/default/objects/AVO_Process_State_Transition_Trigger__c/recordTypes/Avo_Submission_Trigger.recordType-meta.xml
<RecordType>
    <fullName>Avo_Submission_Trigger</fullName>
    <active>true</active>
    <label>Submission Trigger</label>
</RecordType>